--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--meta code must be added-->
   <!---------------- Tiitle ----------------->
-  <title>eFresh Store</title>
+  <title>Farm Pick</title>
   <!--------------Stylesheet------------------>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <!--Favicon ------->
@@ -25,7 +25,7 @@
   <nav class="navigation">
     <!----logo--->
     <a href="index.html" class="logo">
-      <span>e</span>Fresh
+      <span>Farm</span>Pick
     </a>
     <!--menu-btn-->
     <input type="checkbox" class="menu-btn" id="menu-btn">
