--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <!---box---->
       <a href="#" class="category-box">
         <img src="images/fish.png" alt="Fish" width="70px" height="70px">
-        <span>Fish & Meat</span>
+        <span>Fruits</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/vegetable.png" alt="Fish" width="70px" height="70px">
@@ -110,11 +110,11 @@
       </a>
       <a href="#" class="category-box">
         <img src="images/medicine.png" alt="Fish" width="70px" height="70px">
-        <span>Medicine</span>
+        <span>Organic Items</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/baby.png" alt="Fish" width="70px" height="70px">
-        <span>Baby</span>
+        <span>groceries</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/office.png" alt="Fish" width="70px" height="70px">
@@ -122,7 +122,7 @@
       </a>
       <a href="#" class="category-box">
         <img src="images/beauty.png" alt="Fish" width="70px" height="70px">
-        <span>Beauty</span>
+        <span>Fresh Farm</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/gardening.png" alt="Fish" width="70px" height="70px">
@@ -143,9 +143,9 @@
       <!---box---->
       <div class="product-box">
         <img src="images/apple.jpg" alt="apple">
-        <strong>Apple</strong>
+        <strong>Onion</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹150</span>
+        <span class="price">₹22</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -157,9 +157,9 @@
       </div>
       <div class="product-box">
         <img src="images/orange.jpg" alt="orange">
-        <strong>Orange</strong>
+        <strong>Tomato</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹180</span>
+        <span class="price">₹17</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -173,7 +173,7 @@
         <img src="images/cauliflower.jpg" alt="cauliflower">
         <strong>Cauliflower</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹35</span>
+        <span class="price">₹28</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -185,9 +185,9 @@
       </div>
       <div class="product-box">
         <img src="images/onion.jpg" alt="onion">
-        <strong>Onion</strong>
+        <strong>Green chilli</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹25</span>
+        <span class="price">₹40</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -215,7 +215,7 @@
         <img src="images/lemon.jpg" alt="lemon">
         <strong>Lemon</strong>
         <span class="quantity">500 G</span>
-        <span class="price">₹100</span>
+        <span class="price">₹26</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -227,9 +227,9 @@
       </div>
       <div class="product-box">
         <img src="images/mango.jpg" alt="mango">
-        <strong>Mango</strong>
+        <strong>Carrot</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹350</span>
+        <span class="price">₹35</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -243,7 +243,7 @@
         <img src="images/raddish.jpg" alt="raddish">
         <strong>Radish</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹40</span>
+        <span class="price">₹28</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
@@ -255,9 +255,9 @@
       </div>
       <div class="product-box">
         <img src="images/carrot.jpg" alt="carrot">
-        <strong>Carrot</strong>
+        <strong>Brinjal</strong>
         <span class="quantity">1 KG</span>
-        <span class="price">₹70</span>
+        <span class="price">₹37</span>
         <!--cart-btn--->
         <a href="#" class="cart-btn">
           <i class="fas fa-shopping-bag"></i> Add to Cart
