--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="product-container">
       <!---box---->
       <div class="product-box">
-        <img src="images/apple.jpg" alt="apple">
+        <img src="images/onion.jpg" alt="apple">
         <strong>Onion</strong>
         <span class="quantity">1 KG</span>
         <span class="price">₹22</span>
@@ -226,7 +226,7 @@
         </a>
       </div>
       <div class="product-box">
-        <img src="images/mango.jpg" alt="mango">
+        <img src="images/carrot.jpg" alt="mango">
         <strong>Carrot</strong>
         <span class="quantity">1 KG</span>
         <span class="price">₹35</span>
