--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <ul class="menu">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="#category">Categories</a></li>
-      <li><a href="#popular-bundle-pack">Packages</a></li>
-      <li><a href="#download-app">App</a></li>
+      <li><a href="#popular-bundle-pack">About</a></li>
+      <li><a href="#download-app">Contact US</a></li>
     </ul>
     <!---- right-nav-(cart-like)--->
     <div class="right-nav">
@@ -73,8 +73,8 @@
 
     <!---text---->
     <div class="search-banner-text">
-      <h1>Order your groceries for the day</h1>
-      <strong>#Free Delivery</strong>
+      <h1>Order from your Farm for the day</h1>
+      <strong>#24/7 Delivery</strong>
       <!---search box----->
       <form class="search-box" action="">
         <!--icon---->
@@ -101,7 +101,7 @@
     <div class="category-container">
       <!---box---->
       <a href="#" class="category-box">
-        <img src="images/fish.png" alt="Fish" width="70px" height="70px">
+        <img src="images/Fruits.jpg" alt="Fish" width="70px" height="70px">
         <span>Fruits</span>
       </a>
       <a href="#" class="category-box">
