--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="category-container">
       <!---box---->
       <a href="#" class="category-box">
-        <img src="images/Fruits.jpg" alt="Fish" width="70px" height="70px">
+        <img src="images/Fruits1.jpg" alt="Fish" width="70px" height="70px">
         <span>Fruits</span>
       </a>
       <a href="#" class="category-box">
