--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ul class="menu">
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="#category">Categories</a></li>
-      <li><a href="#popular-bundle-pack">About</a></li>
+      <li><a href="/about us.html">About</a></li>
       <li><a href="#download-app">Contact US</a></li>
     </ul>
     <!---- right-nav-(cart-like)--->
