--- a/about us.html
+++ b/about us.html
@@ -1,118 +1,124 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About Us | Farmpick</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    section {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1, h2 {
+      color: #4CAF50;
+    }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .feature {
+      flex: 1;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      min-width: 220px;
+    }
+    .team-section {
+      margin-top: 60px;
+    }
+    .team-members {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      margin-top: 20px;
+    }
+    .member-card {
+      background: #fff;
+      padding: 20px;
+      flex: 1;
+      border-radius: 8px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      min-width: 250px;
+    }
+    .member-card img {
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      margin-bottom: 15px;
+    }
+    footer {
+      background: #333;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+      margin-top: 60px;
+    }
+  </style>
+</head>
+<body>
 
-<html>
+<header>
+  <h1>About Farmpick</h1>
+  <p>Freshness Delivered. Trust Cultivated.</p>
+</header>
 
-    <head>
+<section>
+  <h2>Who We Are</h2>
+  <p>At <strong>Farmpick</strong>, we’re redefining the way people experience fruits, vegetables, and daily groceries — whether you're a business sourcing in bulk or a family looking for daily essentials. We bridge the gap between farms and consumers with care, speed, and trust.</p>
 
-        <title>
+  <h2>Our Mission</h2>
+  <p>To build a transparent, reliable supply chain that supports local farmers, empowers businesses, and delivers wholesome products to homes and commercial kitchens alike.</p>
 
-            About Us
+  <h2>Why Choose Farmpick?</h2>
+  <div class="features">
+    <div class="feature">🌱 Farm-to-Door Freshness</div>
+    <div class="feature">📦 Bulk & Retail Friendly</div>
+    <div class="feature">🛒 Easy Ordering Experience</div>
+    <div class="feature">🚚 Fast, Scheduled Deliveries</div>
+    <div class="feature">🧑‍🌾 Direct from Trusted Sources</div>
+  </div>
 
-        </title>
+  <div class="team-section">
+    <h2>Meet Our Team</h2>
+    <div class="team-members">
+      <div class="member-card">
+        <img src="https://via.placeholder.com/100" alt="Team Member 1">
+        <h3>Ravi Kumar</h3>
+        <p><strong>Co-Founder & Operations Head</strong></p>
+        <p>Ravi brings years of agricultural supply chain experience and leads the farm-to-shelf logistics with unmatched efficiency.</p>
+      </div>
+      <div class="member-card">
+        <img src="https://via.placeholder.com/100" alt="Team Member 2">
+        <h3>Anita Desai</h3>
+        <p><strong>Co-Founder & Marketing Lead</strong></p>
+        <p>Anita drives our B2B and B2C marketing strategy, ensuring Farmpick stays connected with both businesses and households.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
-        <meta charset = "utf-8">
+<footer>
+  <p>&copy; 2025 Farmpick. All rights reserved.</p>
+</footer>
 
-        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-
-        <script src="https://kit.fontawesome.com/5471644867.js" crossorigin="anonymous"></script>
-
-        <link rel = 'stylesheet' type = "text/css" href = 'About Us CSS.css'>
-	    
-	<link rel="shortcut icon" type="image/jpg" href="C:\Users\hp\Desktop\College\First Semester\Introduction To Web Technologies\Notepad ++ Files\Project\favicon.ico"/>
-
-    </head>
-
-    <body>
-
-        <div class = "section">
-
-            <div class = "container">
-
-                <div class = "content-section">
-
-                    <div class = "title">
-
-                        <h1 style = "font-family: 'Poppins', sans-serif;">
-
-                            About Us
-
-                        </h1>
-
-                    </div>
-
-                    <div class = "content">
-
-                        <p>
-
-							If you are looking for farm fresh fruits and vegetables, world-class breads, top-quality pulses
-							and food grains, dairy products, then, <b>CHITKARA GROCERY STORE</b> has got you covered.
-							No more getting stuck in traffic jams, paying for parking, standing in long queues and carrying heavy bags- get everything you need,
-							when you need, right at your doorstep. Right from fresh fruits and vegetables, rice and dals, spices and seasonings to packaged products-we have it all.
-							Choose from a wide range of options in every category, exclusively handpicked to help you find the best quality available at lowest prices.
-							Select a time slot for delivery and your order will be delivered right to your doorstep anywhere in India.
-                            Shopping online is now easy as every product on your monthly shopping list,is now available online at <b>CHITKARA GROCERY STORE</b>.
-
-                            <br>
-
-                            <br>
-
-                            To go to the home page, click on the Chitkara Grocery Store Icon.
-
-                            <br>
-
-                            <br>
-
-                            Get in touch with us through the popular social media platforms.
-
-                        </p>
-
-                    </div>
-
-                    <div class="social">
-
-                        <a href = 'https://www.facebook.com/' style = 'color: black; text-decoration: none;'>
-
-                            <i class = "fab fa-facebook-f"></i>
-
-                        </a>
-
-                        <a href = 'https://twitter.com/?lang=en-in' style = "color: black; text-decoration: none;">
-
-                            <i class = "fab fa-twitter"></i>
-
-                        </a>
-
-                        <a href = 'https://www.instagram.com/' style = "color: black; text-decoration: none;">
-
-                            <i class = "fab fa-instagram"></i>
-
-                        </a>
-
-                        <a href = 'https://www.youtube.com/' style = "color: black; text-decoration: none;">
-
-                            <i class="fab fa-youtube"></i>
-
-                        </a>
-
-                    </div>
-
-                </div>
-
-
-                <div class = "image-section">
-
-                    <a href = 'Home Page HTML.html'>
-
-                        <img src = 'https://i.imgur.com/FyO9dZl.png' alt = 'Chitkara Grocery Store' style = 'cursor: pointer;'>
-
-                    </a>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </body>
-
+</body>
 </html>
