--- a/about us.html
+++ b/about us.html
@@ -101,14 +101,14 @@
     <h2>Meet Our Team</h2>
     <div class="team-members">
       <div class="member-card">
-        <img src="https://via.placeholder.com/100" alt="Team Member 1">
-        <h3>Ravi Kumar</h3>
+        <img src="/images/Rahul.png" alt="Team Member 1">
+        <h3>Rahul</h3>
         <p><strong>Co-Founder & Operations Head</strong></p>
         <p>Ravi brings years of agricultural supply chain experience and leads the farm-to-shelf logistics with unmatched efficiency.</p>
       </div>
       <div class="member-card">
-        <img src="https://via.placeholder.com/100" alt="Team Member 2">
-        <h3>Anita Desai</h3>
+        <img src="/images/Dharani.png" alt="Team Member 2">
+        <h3>Dharani</h3>
         <p><strong>Co-Founder & Marketing Lead</strong></p>
         <p>Anita drives our B2B and B2C marketing strategy, ensuring Farmpick stays connected with both businesses and households.</p>
       </div>
