--- a/about us.html
+++ b/about us.html
@@ -117,7 +117,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Farmpick. All rights reserved.</p>
+  <p>&copy; 2025 Farmpick. All Copyrights reserved by AjithKumar S.</p>
 </footer>
 
 </body>
