--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@
          <strong>Contact</strong>
          <ul>
            <li>
-             <a href="#">Phone: +(91) 1234567890</a>
+             <a href="#">Phone: +(91) 88259 35176</a>
            </li>
            <li>
-             <a href="#">Email: example@gmail.com</a>
+             <a href="#">Email: hello@e-farmpick.in</a>
            </li>
          </ul>
        </div>
