--- a/about us.html
+++ b/about us.html
@@ -1,76 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us | Farmpick</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet" />
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f7f7f7;
+      background-color: #f4f6f8;
       color: #333;
     }
+
     header {
-      background-color: #4CAF50;
+      background: linear-gradient(135deg, #4CAF50, #388E3C);
       color: white;
-      padding: 40px 20px;
+      padding: 60px 20px;
       text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      font-weight: 300;
+    }
+
     section {
-      max-width: 1000px;
-      margin: 40px auto;
+      max-width: 1100px;
+      margin: 50px auto;
       padding: 0 20px;
     }
-    h1, h2 {
-      color: #4CAF50;
+
+    h2 {
+      color: #2e7d32;
+      margin-bottom: 15px;
     }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
     .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
     }
+
     .feature {
-      flex: 1;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      min-width: 220px;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      text-align: center;
+      font-weight: 500;
+      color: #2e7d32;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+
+    .feature:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
     .team-section {
       margin-top: 60px;
     }
+
     .team-members {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
-      margin-top: 20px;
+      margin-top: 30px;
     }
+
     .member-card {
-      background: #fff;
-      padding: 20px;
-      flex: 1;
-      border-radius: 8px;
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      min-width: 250px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
+    .member-card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
+    }
+
     .member-card img {
       border-radius: 50%;
-      width: 100px;
-      height: 100px;
+      width: 110px;
+      height: 110px;
       object-fit: cover;
       margin-bottom: 15px;
+      border: 3px solid #4CAF50;
     }
+
+    .member-card h3 {
+      margin: 10px 0 5px;
+      color: #388E3C;
+    }
+
+    .member-card p {
+      font-size: 0.95rem;
+      color: #555;
+    }
+
     footer {
-      background: #333;
-      color: #ccc;
+      background: #2e7d32;
+      color: #fff;
       text-align: center;
       padding: 20px;
-      margin-top: 60px;
+      font-size: 0.95rem;
+      margin-top: 80px;
     }
   </style>
 </head>
@@ -83,10 +139,15 @@
 
 <section>
   <h2>Who We Are</h2>
-  <p>At <strong>Farmpick</strong>, we’re redefining the way people experience fruits, vegetables, and daily groceries — whether you're a business sourcing in bulk or a family looking for daily essentials. We bridge the gap between farms and consumers with care, speed, and trust.</p>
+  <p>
+    At <strong>Farmpick</strong>, we’re redefining the way people experience fruits, vegetables, and daily groceries — whether you're a business sourcing in bulk or a family looking for daily essentials.
+    We bridge the gap between farms and consumers with care, speed, and trust.
+  </p>
 
   <h2>Our Mission</h2>
-  <p>To build a transparent, reliable supply chain that supports local farmers, empowers businesses, and delivers wholesome products to homes and commercial kitchens alike.</p>
+  <p>
+    To build a transparent, reliable supply chain that supports local farmers, empowers businesses, and delivers wholesome products to homes and commercial kitchens alike.
+  </p>
 
   <h2>Why Choose Farmpick?</h2>
   <div class="features">
@@ -101,23 +162,23 @@
     <h2>Meet Our Team</h2>
     <div class="team-members">
       <div class="member-card">
-        <img src="/images/Rahul.png" alt="Team Member 1">
+        <img src="/images/Rahul.png" alt="Rahul">
         <h3>Rahul</h3>
         <p><strong>Co-Founder & Operations Head</strong></p>
-        <p>Ravi brings years of agricultural supply chain experience and leads the farm-to-shelf logistics with unmatched efficiency.</p>
+        <p>Rahul brings years of agricultural supply chain experience and leads the farm-to-shelf logistics with unmatched efficiency.</p>
       </div>
       <div class="member-card">
-        <img src="/images/Dharani.png" alt="Team Member 2">
+        <img src="/images/Dharani.png" alt="Dharani">
         <h3>Dharani</h3>
         <p><strong>Co-Founder & Marketing Lead</strong></p>
-        <p>Anita drives our B2B and B2C marketing strategy, ensuring Farmpick stays connected with both businesses and households.</p>
+        <p>Dharani drives our B2B and B2C marketing strategy, ensuring Farmpick stays connected with both businesses and households.</p>
       </div>
     </div>
   </div>
 </section>
 
 <footer>
-  <p>&copy; 2025 Farmpick. All Copyrights reserved by AjithKumar S.</p>
+  <p>&copy; 2025 Farmpick. All rights reserved. Designed by AjithKumar S.</p>
 </footer>
 
 </body>
