--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--- menu------>
     <ul class="menu">
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="#category">Categories</a></li>
+      <li><a href="#category">Shop</a></li>
       <li><a href="/about us.html">About</a></li>
       <li><a href="#download-app">Contact US</a></li>
     </ul>
@@ -73,8 +73,8 @@
 
     <!---text---->
     <div class="search-banner-text">
-      <h1>Order from your Farm for the day</h1>
-      <strong>#24/7 Delivery</strong>
+      <h1>Order from our Farm for the day</h1>
+      <strong>#Faster Delivery</strong>
       <!---search box----->
       <form class="search-box" action="">
         <!--icon---->
@@ -109,16 +109,16 @@
         <span>Vegetables</span>
       </a>
       <a href="#" class="category-box">
-        <img src="images/medicine.png" alt="Fish" width="70px" height="70px">
+        <img src="images/gardening.png" alt="Fish" width="70px" height="70px">
         <span>Organic Items</span>
       </a>
       <a href="#" class="category-box">
-        <img src="images/baby.png" alt="Fish" width="70px" height="70px">
+        <img src="images/vegetable.png" alt="Fish" width="70px" height="70px">
         <span>groceries</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/office.png" alt="Fish" width="70px" height="70px">
-        <span>Office</span>
+        <span>Business</span>
       </a>
       <a href="#" class="category-box">
         <img src="images/beauty.png" alt="Fish" width="70px" height="70px">
@@ -156,7 +156,7 @@
         </a>
       </div>
       <div class="product-box">
-        <img src="images/orange.jpg" alt="orange">
+        <img src="images/Tomato11.jpg" alt="orange">
         <strong>Tomato</strong>
         <span class="quantity">1 KG</span>
         <span class="price">₹17</span>
@@ -184,7 +184,7 @@
         </a>
       </div>
       <div class="product-box">
-        <img src="images/onion.jpg" alt="onion">
+        <img src="images/gchilli.jpg" alt="onion">
         <strong>Green chilli</strong>
         <span class="quantity">1 KG</span>
         <span class="price">₹40</span>
@@ -254,7 +254,7 @@
         </a>
       </div>
       <div class="product-box">
-        <img src="images/carrot.jpg" alt="carrot">
+        <img src="images/Brinjal.jpg" alt="carrot">
         <strong>Brinjal</strong>
         <span class="quantity">1 KG</span>
         <span class="price">₹37</span>
