--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@
             <div class="review-card">
                 <img src="images/vairamuthu logo.jpg" alt="Customer 4">
                 <strong>vairamuthu</strong>
-                <p>Great prices and excellent customer support. I highly recommend Farm Pick for all your fresh produce needs!</p>
+                <p>"The Vegetables given by the Earth protect our bodies". Vairamuthu's works often reflect the connection between nature and human health,
+                  underscoring the importance of simple foods like vegetables for maintaining health.
+                </p>
             </div>
             <div class="review-card">
                 <img src="images/ambethkar logo.jpg" alt="Customer 5">
