--- a/Homepage.html
+++ b/Homepage.html
@@ -171,7 +171,7 @@
 <body>
     <nav class="navigation">
         <a href="index.html" class="logo">
-            <span>Farm</span>Pick
+            <span>🌿 Farm</span>Pick
         </a>
         <input type="checkbox" class="menu-btn" id="menu-btn">
         <label for="menu-btn" class="menu-icon">
