--- a/Homepage.html
+++ b/Homepage.html
@@ -518,7 +518,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="#"><span>e</span>Fresh</a>
+                <a href="#"><span>Farm</span>Pick</a>
                 <div class="footer-social">
                     <a href="#">
                         <i class="fa-brands fa-facebook" style="color: #3a87fe;"></i>
@@ -532,16 +532,16 @@
                 <strong>Product</strong>
                 <ul>
                     <li>
-                        <a href="#">Clothes</a>
+                        <a href="#">Vegetables</a>
                     </li>
                     <li>
-                        <a href="#">Packages</a>
+                        <a href="#">Fruits</a>
                     </li>
                     <li>
-                        <a href="#">Popular</a>
+                        <a href="#">Groceries</a>
                     </li>
                     <li>
-                        <a href="#">New</a>
+                        <a href="#">Organic</a>
                     </li>
                 </ul>
             </div>
@@ -549,16 +549,16 @@
                 <strong>Category</strong>
                 <ul>
                     <li>
-                        <a href="#">Beauty</a>
+                        <a href="#">Fruits</a>
                     </li>
                     <li>
                         <a href="#">Meats</a>
                     </li>
                     <li>
-                        <a href="#">Kids</a>
+                        <a href="#">Poultry</a>
                     </li>
                     <li>
-                        <a href="#">Clothes</a>
+                        <a href="#">Farm</a>
                     </li>
                 </ul>
             </div>
