--- a/Homepage.html
+++ b/Homepage.html
@@ -203,7 +203,7 @@
             <strong>#Faster Delivery</strong>
             <form class="search-box" action="">
                 <i class="fas fa-search"></i>
-                <input type="text" class="search-input" placeholder="Search your daily grocery" name="search" required>
+                <input type="text" class="search-input" placeholder="Search your daily Veggies & Fruits" name="search" required>
                 <input type="submit" class="btn" value="Search">
             </form>
         </div>
