--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Qyenyeji, Home of Organic Veges</title>
+    <title>Farm Pick</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -36,11 +36,11 @@
 		    		<div class="row d-flex">
 		    			<div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-						    <span class="text">+254 737 008 815</span>
+						    <span class="text">+91 88259 35176</span>
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-						    <span class="text">info@fourbic.com</span>
+						    <span class="text">hello@e-farmpick.in</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
 						    <span class="text">Orders taken on Business days, All deliveries on Weekends</span>
@@ -52,7 +52,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Qyenyeji</a>
+	      <a class="navbar-brand" href="index.html">🌿 Farm Pick</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -103,17 +103,17 @@
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Phone:</span> <a href="tel://1234567920">+254 737 008 815</a></p>
+	            <p><span>Phone:</span> <a href="tel://1234567920">+91 88259 35176</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Email:</span> <a href="mailto:info@fourbic.com">info@fourbic.com</a></p>
+	            <p><span>Email:</span> <a href="mailto:info@fourbic.com">hello@e-farmpick.in</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Website</span> <a href="#">fourbic.com</a></p>
+	            <p><span>🌿 Farm</span> <a href="#">Pick</a></p>
 	          </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Qyenyeji</h2>
+              <h2 class="ftco-heading-2">🌿 Farm Pick</h2>
               <p>Eat clean and green. Eat Organic Food filled with the essence of Nature</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -200,9 +200,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">New Kitusuru, off Getathuru Rd, Nairobi</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254 737 008 815</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@fourbic.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">FarmPick, Malumichampatti</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 88259 35176</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hello@e-farmpick.in</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -212,7 +212,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">fourbic</a>
+						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">AjithKumar S</a>
 						  <!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
           </div>
