--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
           <div class="w-100"></div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
-	            <p><span>Address:</span> New Kitusuru, off Getathuru Rd, Nairobi</p>
+	            <p><span>Address:</span> FarmPick, Malumichampatti </p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
