--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                   </div>
 
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5 pl-4 line">The Professional with both Business and Social Minded.</p>
                     <p class="name">Dharani</p>
                     <span class="position">Founder and Operator</span>
                   </div>
@@ -213,7 +213,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5 pl-4 line">His efforts and diligence made him reach this high.</p>
                     <p class="name">Rahul</p>
                     <span class="position">Founder & Functional Lead</span>
                   </div>
@@ -226,7 +226,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5 pl-4 line">This content is not Updated yet.</p>
                     <p class="name">User 3</p>
                     <span class="position">Business Analyst</span>
                   </div>
