--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Dharani</p>
                     <span class="position">UI Designer</span>
                   </div>
                 </div>
@@ -241,7 +241,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">User 3</p>
                     <span class="position">Web Developer</span>
                   </div>
                 </div>
@@ -255,7 +255,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">User 4</p>
                     <span class="position">System Analyst</span>
                   </div>
                 </div>
