--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">User 5</p>
+                    <p class="name">Dharani</p>
                     <span class="position">System Analyst</span>
                   </div>
                 </div>
