--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">The Business </p>
+                    <p class="mb-5 pl-4 line">The Business analytics part is the first and foremost part.</p>
                     <p class="name">User 4</p>
                     <span class="position">Business Analyst</span>
                   </div>
@@ -254,7 +254,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-5 pl-4 line">The Analyst is the role that defines the business growth. </p>
                     <p class="name">User 5</p>
                     <span class="position">Business Analyst</span>
                   </div>
