--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">his Hardwork and Diligence made him the way to his high.</p>
+                    <p class="mb-5 pl-4 line">His Hardwork and Diligence made him the way to his high.</p>
                     <p class="name">Rahul</p>
                     <span class="position">Founder and Funtional Lead</span>
                   </div>
@@ -212,9 +212,9 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">The Professional with both Business and Social Minded.</p>
-                    <p class="name">Dharani</p>
-                    <span class="position">Founder and Operational Lead</span>
+                    <p class="mb-5 pl-4 line">The Analyst is the role that defines the business growth.</p>
+                    <p class="name">User 5</p>
+                    <span class="position">Business Analyst</span>
                   </div>
                 </div>
               </div>
@@ -254,9 +254,9 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">The Analyst is the role that defines the business growth. </p>
-                    <p class="name">User 5</p>
-                    <span class="position">Business Analyst</span>
+                    <p class="mb-5 pl-4 line">The Professional with both Business and Social Minded.</p>
+                    <p class="name">Dharani</p>
+                    <span class="position">Founder and Operational Lead</span> 
                   </div>
                 </div>
               </div>
