--- a/about.html
+++ b/about.html
@@ -248,7 +248,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url(images/person.jpg)">
+                  <div class="user-img mb-5" style="background-image: url(images/Dharani.png)">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
