--- a/about.html
+++ b/about.html
@@ -212,9 +212,9 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">The Analyst is the role that defines the business growth.</p>
+                    <p class="mb-5 pl-4 line">IT Technical and L1 Lead</p>
                     <p class="name">User 3</p>
-                    <span class="position">Business Analyst</span>
+                    <span class="position">IT Developer</span>
                   </div>
                 </div>
               </div>
@@ -226,9 +226,9 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">IT Technical and L1 Lead</p>
+                    <p class="mb-5 pl-4 line">The Analyst is the role that defines the business growth.</p>
                     <p class="name">User 4</p>
-                    <span class="position">IT Lead</span>
+                    <span class="position">Business Analyst</span>
                   </div>
                 </div>
               </div>
