--- a/about.html
+++ b/about.html
@@ -212,9 +212,9 @@
                     </span>
                   </div>
                   <div class="text text-center">
-                    <p class="mb-5 pl-4 line">IT Technical and L1 Lead</p>
+                    <p class="mb-5 pl-4 line">IT Developer who manages to handle technial stuffs in flow of the company.</p>
                     <p class="name">User 3</p>
-                    <span class="position">IT Developer</span>
+                    <span class="position">IT Technical Lead </span>
                   </div>
                 </div>
               </div>
