--- a/about.html
+++ b/about.html
@@ -183,8 +183,8 @@
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Testimony</span>
-            <h2 class="mb-4">What we are</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
+            <h2 class="mb-4">What & Who we are</h2>
+            <p>Our Consultants and Advisors, who sets a vision on your requirements and needs.</p>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -276,7 +276,7 @@
               </div>
               <div class="media-body">
                 <h3 class="heading">Free Shipping</h3>
-                <span>On order over Ksh. 300</span>
+                <span>On order over Rs.3000</span>
               </div>
             </div>
           </div>
@@ -329,7 +329,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Qyenyeji</h2>
+              <h2 class="ftco-heading-2">🌿 Farm Pick</h2>
               <p>Eat clean and green. Eat Organic Food filled with the essence of Nature</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -368,12 +368,12 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have any Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">New Kitusuru, off Getathuru Rd, Nairobi</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254 737 008 815</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@fourbic.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Farm Pick, Malumichampatti</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 88259 35176</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hello@e-farmpick.in</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -383,7 +383,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">fourbic</a>
+						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">AjithKumar S</a>
 						  <!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
           </div>
