--- a/homepage.html
+++ b/homepage.html
@@ -559,6 +559,12 @@
 
 		<section class="ftco-section ftco-partner">
     	<div class="container">
+			<div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 heading-section ftco-animate text-center">
+          	<span class="subheading">Our Trusted Partners</span>
+            <h2 class="mb-4">Initiated with Our Team</h2>
+            <p></p>
+          </div>
     		<div class="row">
     			<div class="col-sm ftco-animate">
     				<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid" alt="fourbic Template"></a>
