--- a/homepage.html
+++ b/homepage.html
@@ -559,12 +559,6 @@
 
 		<section class="ftco-section ftco-partner">
     	<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section ftco-animate text-center">
-          	<span class="subheading">Our Trusted Partners</span>
-            <h2 class="mb-4">Initiated with Our Team</h2>
-            <p></p>
-          </div>
     		<div class="row">
     			<div class="col-sm ftco-animate">
     				<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid" alt="fourbic Template"></a>
@@ -630,7 +624,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Shop</a></li>
                 <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Journal</a></li>
+                <li><a href="#" class="py-2 d-block">Categories</a></li>
                 <li><a href="#" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
@@ -641,7 +635,7 @@
               <div class="d-flex">
 	              <ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
 	                <li><a href="#" class="py-2 d-block">Shipping Information</a></li>
-	                <li><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
+	                <li><a href="#" class="py-2 d-block">Enquire &amp; Queryies</a></li>
 	                <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
 	                <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
 	              </ul>
